--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable(vladoom
     "src/furniture.cpp"
     "src/item.cpp"
     "src/secret_door.cpp"
+    "src/dog.cpp"
 )
 
 # find_library(GLFW_LIB glfw PATHS ${CMAKE_SOURCE_DIR}/deps/library/)
